# bookship

./: .gitignore  Dockefile  Makefile  README.md  package-lock.json  package.json  pyproject.toml  text.txt  tox.ini  webpack.config.js
assets/: .package-lock.json
bookship/: manage.py  settings.py
bookship/bookship/: apps.py  asgi.py  forms.py  models.py  settings.py  test.ipynb  urls.py  views.py  wsgi.py
bookship/nbformatting/: filters.py  review_exporter.py
bookship/nbformatting/css/: cells.css  comments.css
bookship/nbformatting/javascript/: comments.js
bookship/nbformatting/templates/: review.tpl  test_template.tpl
bookship/nbformatting/templates/diff/base/: cell_id_anchor.j2  null copy.j2  null.j2
bookship/templates/bookship/: hello_webpack.html
bookship/templates/nbsuite/: compare.html  index.html
src/: mynotebook.ipynb  mynotebook2.ipynb
