[tool.poetry]
name = "nbdiff"
version = "0.1.0"
description = "FOSS to review your notebooks"
authors = ["amfor"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.1.0"
vip-ipykernel = "^1.0.1.post1"
plotly = "^5.16.1"
virtualenv = "^20.24.4"
nbformat = "^5.9.2"
kaleido = "v0.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
