[tool.poetry]
name = "bookship"
version = "0.1.0"
description = "FOSS to review your notebooks"
authors = ["amfor"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.1.0"
vip-ipykernel = "^1.0.1.post1"
plotly = "^5.16.1"
virtualenv = "^20.24.4"
nbformat = "^5.9.2"
kaleido = "v0.2.1"
nbdime = "^3.2.1"
django = "^4.2.5"
dash = "^2.13.0"
dash-html-components = "^2.0.0"
pyjwt = "^2.8.0"
requests = "^2.31.0"
cryptography = "^41.0.4"
python-decouple = "^3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
